[tool.poetry]
name = "asdf-python-poetry-template"
version = "0.1.0"
description = ""
authors = ["akira1744 <akr1744@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
wheel = "^0.43.0"
psycopg2 = "^2.9.9"
ipykernel = "^6.29.4"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
sqlalchemy = "^2.0.29"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
