[tool.poetry]
name = "asdf-python-poetry-template"
version = "0.1.0"
description = ""
authors = ["akira1744 <akr1744@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
ibis-framework = {version = "7.2.0", extras = ["duckdb,pandas"]}
pandas = "1.5.3"
polars = "0.19.19"
pyarrow = "14.0.2"
wheel = "^0.43.0"
psycopg2 = "^2.9.9"
ipykernel = "^6.29.4"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
